# backup-script

./: Cargo.toml  README.md  archive.toml
.github/workflows/: release.yml  tag.yml
.sqlx/: query-35ca88c36700f045be7741fd9e3683265ff4f05ce56a88592460fb13e7a7ca18.json  query-c3875b25d0d26c7989d292c48ce61a8a030ed390b7d177e07ec5dcb75111a338.json
src/: archive.rs  config.rs  db.rs  main.rs
src/archive/: controller.rs  mod.rs  website_checker.rs
