[package]
name = "archive-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
serde = { version = "1.0.167", features = ["derive"] }
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros", "signal", "time"] }
toml = "0.7.6"
