[package]
name = "archive-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
color-eyre = "0.6.2"
reqwest = "0.11.18"
serde = { version = "1.0.167", features = ["derive"] }
sqlx = { version = "0.7.0", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros", "signal", "time"] }
toml = "0.7.6"
