[package]
name = "archive-tool"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.11", features = ["derive"] }
color-eyre = "0.6.2"
reqwest = "0.11.18"
serde = { version = "1.0.167", features = ["derive"] }
sqlx = { version = "0.7.0", features = ["runtime-tokio-rustls", "postgres"] }
time = { version = "0.3.23", features = ["macros"] }
tokio = { version = "1.29.1", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "time",
    "process",
] }
toml = "0.7.6"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["time"] }
